--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 
 <div class="container">
-  <h1>My First Bootstrap Page</h1>
-  <p>This is some text.</p>
+  <h1>ini github!</h1>
+  <p>bikin url based on github</p>
 
 
 </div>
