--- a/index.html
+++ b/index.html
@@ -2,21 +2,232 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-5805610-1"></script>
+  <!--<script async src="https://www.googletagmanager.com/gtag/js?id=UA-5805610-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     gtag('config', 'UA-5805610-1');
-  </script>
-  <title>Dustin Curtis</title>
+  </script>-->
+  <title>Beni</title>
   <meta name="description" content="Designer. Investor. Nomad."/>
   <link href="/stylesheets/master.css?15" media="all" rel="stylesheet">
+<style>
+/*
+
+HELLO, WELCOME TO THE CSS FILE.
+ENJOY.
+
+body {
+  font-family: 'PostGrotesk', 'Circular', 'Helvetica', 'Arial', sans-serif;
+  background-color: #fff;
+  color: #000;
+}
+
+*/
+
+body {
+  background-color: #fff;
+  font-family: -apple-system, "Segoe UI", system-ui, Roboto, Ubuntu, 'Helvetica Neue', Oxygen, Cantarell, Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-weight: 400;
+
+  /*background-color: #121215;*/
+}
+
+section#main {
+  position: fixed;
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  bottom: 0px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+div#panel {
+  display: block;
+  width: 100%;
+  height: auto;
+  margin-bottom: 100px;
+}
+
+h1 {
+  font-weight: 700;
+  font-size: 4.7vw;
+  line-height: 1;
+  padding-left: 35px;
+  margin-top: 200px;
+  padding-right: 15px;
+  letter-spacing: -0.5px;
+  margin-bottom: 5px;
+  opacity: 1;
+}
+
+h1 span {
+  color: #fb0448;
+  font-weight: 700;
+}
+
+h2 {
+  font-size: 2.5vw;
+  line-height: 1.25;
+  font-weight: 400;
+  padding-left: 35px;
+  padding-right: 60px;
+  margin: 0px;
+}
+
+h2 a {
+  font-weight: 400;
+}
+
+p#ready {
+  display: block;
+  position: fixed;
+  left: 35px;
+  bottom: 35px;
+  font-size: 14px;
+  margin: 0px;
+
+  opacity: 1;
+}
+
+p#ready a {
+  display: block;
+
+  position: relative;
+  margin-bottom: 5px;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+a {
+  color: rgba(39,39,39,1);
+  font-weight: 700;
+  padding-bottom: 3px;
+  text-decoration: none;
+  opacity: 1;
+  /*-webkit-transition: all 1s cubic-bezier(0.215, 0.61, 0.355, 1);
+  -moz-transition: all 1s cubic-bezier(0.215, 0.61, 0.355, 1);
+  -ms-transition: all 1s cubic-bezier(0.215, 0.61, 0.355, 1);
+  -o-transition: all 1s cubic-bezier(0.215, 0.61, 0.355, 1);
+  transition: all 1s cubic-bezier(0.215, 0.61, 0.355, 1);*/
+
+  /*color: #bbbbc4;*/
+}
+
+h1 a {
+  /*color: #fff;*/
+}
+
+h2 a {
+  /*color: #bbbbc4;*/
+}
+
+a:hover {
+  color: rgba(255,78,78,1);
+  text-decoration: none;
+}
+
+@media (max-width: 760px){
+  h1 {
+    font-weight: 700;
+    font-size: 7vw;
+    line-height: 1;
+    padding-left: 30px;
+    margin-top: 150px;
+  }
+  h2 {
+    font-size: 5vw;
+    padding-left: 30px;
+  }
+  img.bomb {
+    padding-left: 30px;
+  }
+  p#ready {
+    font-size: 14px;
+    left: 30px;
+  }
+}
+
+@media (min-width: 1300px){
+  h1 {
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 1;
+    padding-left: 30px;
+    margin-top: 50px;
+  }
+  h2 {
+    font-size: 35px;
+    padding-left: 30px;
+  }
+  img.bomb {
+    padding-left: 30px;
+  }
+  p#ready {
+    font-size: 14px;
+    left: 30px;
+  }
+}
+
+@media (max-height: 414px){
+  h1 {
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 1;
+    padding-left: 30px;
+    margin-top: 100px;
+  }
+  h2 {
+    font-size: 25px;
+    padding-left: 30px;
+  }
+  img.bomb {
+    margin-top: 50px;
+    padding-left: 25px;
+    height: 50px;
+    width: 50px;
+  }
+  p#ready {
+    font-size: 14px;
+    left: 30px;
+  }
+}
+
+@media (max-height: 214px){
+  h1 {
+    font-weight: 700;
+    font-size: 35px;
+    line-height: 1;
+    padding-left: 30px;
+    margin-top: 60px;
+  }
+  h2 {
+    font-size: 20px;
+    padding-left: 30px;
+  }
+  img.bomb {
+    margin-top: 50px;
+    padding-left: 25px;
+    height: 50px;
+    width: 50px;
+  }
+  p#ready {
+    font-size: 14px;
+    left: 30px;
+    bottom: 10px;
+  }
+}
+</style>
 </head>
 <body>
   <section id="main">
     <div id="panel">
-      <h1><a href="https://dcurt.is">Dustin Curtis</a></h1>
+      <h1><a href="https://beni.website">Beni</a></h1>
       <h2>
         <a href="https://specificstatic.com" target="_blank">Investor.</a>
         <a href="https://twitter.com/dcurtis" target="_blank">Designer.</a> 
