--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Designer. Investor. Nomad."/>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  
   <!--<script async src="https://www.googletagmanager.com/gtag/js?id=UA-5805610-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -12,6 +18,7 @@
   <title>Beni</title>
   <meta name="description" content="Designer. Investor. Nomad."/>
   <link href="/stylesheets/master.css?15" media="all" rel="stylesheet">
+  
 <style>
 /*
 
