--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     gtag('config', 'UA-5805610-1');
   </script>-->
   
-<title>Beni</title>
+<title>beni.</title>
 <meta name="description" content="Designer. Investor. Nomad."/>
 <link href="/css/style.css" media="all" rel="stylesheet">
 
