--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
     <div id="panel">
       <h1><a href="https://beni.website">Beni</a></h1>
       <h2>
-        <a href="https://specificstatic.com" target="_blank">Investor.</a>
-        <a href="https://twitter.com/dcurtis" target="_blank">Designer.</a> 
+        <a href="https://specificstatic.com" target="_blank">Web.</a>
+        <a href="https://github.com/benipx" target="_blank">Github.</a> 
         <a href="https://dcurt.is" target="_blank">Writer.</a> 
         <a href="https://conquer.earth/dcurtis" target="_blank">Nomad.</a>&nbsp;<a href="https://instagram.com/dcurtis" target="_blank">Villain.</a>
       </h2>
     </div>
   </section>
   <footer>
-    <p id="ready"><a href="mailto:hi@dustincurtis.com?subject=Hi%20from%20dustincurtis.com">hi@dustincurtis.com</a></p>
+    <p id="ready"><a href="mailto:benipx@gmail.com?subject=Hi%20from%20dustincurtis.com">benipx@gmail.com</a></p>
     </p>
   </footer>
 </body>
